@@ -10,6 +10,10 @@ WebAuth 3.7.4 (unreleased)
     Avoid problems with generating the pkg-config configuration file when
     the Kerberos linker flags contain commas.
 
+    Update to C TAP Harness 1.6:
+
+    * Fix compliation of runtests with more aggressive warnings.
+
 WebAuth 3.7.3 (2010-09-20)
 
     Explicitly link the mod_webauthldap module with the portability glue
